# testnet-benchmarking

./: .gitignore  Dockerfile  README.md  check-network-metrics.sh  generate_prometheus.sh  resize_volumes.sh
ansible/: deploy-seismic-consensus.yml  deploy-seismic-reth.yml  deploy-seismic-simplex.yml  deploy-summit.yml  deploy-tx-sender.yml  dkg_testnet  generate_inventory.sh  genesis_template.toml.j2  get-logs.yml  inventory.ini  manage-containers.yml  provision-testnet.yml
op-reth/: Dockerfile
reth/: Dockerfile
seismic-consensus/: Dockerfile
seismic-reth/: Dockerfile
seismic-simplex/: Dockerfile
summit/: Dockerfile
terraform/: main.tf  outputs.tf  terraform.tfstate  terraform.tfvars  variables.tf
terraform-spamnet/: main.tf  outputs.tf  terraform.tfvars  variables.tf
terraform-spamnet/modules/regional-deployment/: main.tf  variables.tf
terraform/modules/regional-deployment/: main.tf  outputs.tf  variables.tf
tx-sender/: Cargo.toml  Dockerfile  docker-compose.yml  inventory.ini  private_keys.txt  raw_transactions.json
tx-sender/src/: lib.rs  main.rs  send_tx.rs  utils.rs
