[package]
name = "tx-sender"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "send-tx"
path = "src/send_tx.rs"

[dependencies]
alloy = { version = "1.0", features = ["providers", "network", "signers", "signer-local", "rpc", "rpc-types"] }
tokio = { version = "1", features = ["full"] }
eyre = "0.6"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
indicatif = "0.18"